# shadematch_python

./: .env  .gitignore  ARCHITECTURE_REVIEW.md  COLOR_SYSTEM_DEVELOPMENT.md  COOKIE_CONSENT_README.md  ISHIHARA_TEST_SETUP.md  Pipfile  README.md  SOURCES.md  ShadeMatch_iOS_Implementation_Spec.md  _lang_shot.mjs  color_spectra.md  config.py  deploy_check.py  generate_test_plates.py  gunicorn.conf.py  init_db.py  migrate_add_analytics.py  migrate_add_calibration.py  migrate_add_challenge_attempts.py  migrate_add_challenge_links.py  migrate_add_consent_records.py  migrate_add_email_identity.py  migrate_add_locale.py  migrate_add_matches.py  migrate_add_mixing_dimensions.py  migrate_add_nickname.py  migrate_add_probe_tables.py  migrate_add_quality_score.py  migrate_backfill_mixing_dimensions.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  requirements_images.txt  run.py  salata_csonkanyag_reflektancia.xlsx  sample_spectrum.csv  spectral_mixer.py  (+1 more)
.claude/: launch.json
app/: __init__.py  calibration.py  clusters.py  color_drops.py  diploma.py  email_utils.py  gamification.py  gamut_lab.py  i18n.py  matches.py  mixed_models_stat.py  models.py  next_action.py  og_card.py  probe.py  regions.py  routes.py  spectral_km.py  stat_eda.py  stat_plot_data.py  stat_riport_data.py  tz_country.py  utils.py
data/: GAMUT_REPORT.md  match_clusters_mc-v1.json  palette_recommendations.json  pigments_library.json
demo/: SOURCES.md  build_narrated_video.sh  capture.mjs  capture_gamut.mjs  capture_reverse.mjs  narration.md  pitch.html  showcase.mjs  sudarat_video_script.md
ishihara/: ishihara.csv
netlify_share/: README.md  netlify.toml
scripts/: BACKFILL_TARGET_COLOR_DROPS.md  add_hu_color_glosses.py  build_eda_pdf.py  check_winback_preview_optout.py  (+38 more)
(+163 files in other folders)
