[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.38.0", "setuptools-scm>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shadematch-python"
version = "1.0.0"
description = "A Flask-based color matching and spectral analysis application"
requires-python = ">=3.11.7"
dependencies = [
    "Flask>=2.1.2",
    "Flask-SQLAlchemy>=2.5.1",
    "gunicorn>=20.1.0",
    "python-dotenv>=1.0.0",
    "colormath>=3.0.0",
    "numpy>=1.24.3",
    "pandas>=1.5.3",
    "matplotlib>=3.7.2",
    "openpyxl>=3.1.2",
    "plotly>=5.17.0",
    "networkx>=3.3",
    "mysql-connector-python>=8.0.33",
    "psycopg2-binary>=2.9.7",
    "Pillow>=9.5.0",
    "scipy>=1.10.1",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["templates/*", "static/*"]
